{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 14,
  "lineage": "06b32010-7071-1047-b825-48dbc1e33f44",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "VM1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f561d16f3799be82",
            "arn": "arn:aws:ec2:us-east-1:698022664232:instance/i-021ece60c31069587",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-021ece60c31069587",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-092babb72b94c37f4",
            "private_dns": "ip-100-64-1-117.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "100.64.1.117",
            "public_dns": "ec2-3-92-45-110.compute-1.amazonaws.com",
            "public_ip": "3.92.45.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0518edbba396155b1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-047851ff056a825c5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0523167db10f8bc33",
            "tags": {
              "Name": "vm1"
            },
            "tags_all": {
              "Name": "vm1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-047851ff056a825c5"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-tf",
            "aws_subnet.SN-public-1",
            "aws_vpc.lab5-vpc",
            "data.aws_ami.latest_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "VM2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f561d16f3799be82",
            "arn": "arn:aws:ec2:us-east-1:698022664232:instance/i-0b3a0826451bbe1ba",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b3a0826451bbe1ba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0560ba85ace171e17",
            "private_dns": "ip-100-64-2-147.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "100.64.2.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06c8876e890469094",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-047851ff056a825c5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f6540a679e7c2526",
            "tags": {
              "Name": "vm2"
            },
            "tags_all": {
              "Name": "vm2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-047851ff056a825c5"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-tf",
            "aws_subnet.SN-private-1",
            "aws_vpc.lab5-vpc",
            "data.aws_ami.latest_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698022664232:internet-gateway/igw-07c12ec2406605337",
            "id": "igw-07c12ec2406605337",
            "owner_id": "698022664232",
            "tags": {
              "Name": "igw-test"
            },
            "tags_all": {
              "Name": "igw-test"
            },
            "vpc_id": "vpc-0129b1c8072c69fc7"
          },
          "dependencies": [
            "aws_vpc.lab5-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07c12ec2406605337",
            "id": "r-rtb-014eda06ffa18b32d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-014eda06ffa18b32d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-test",
            "aws_route_table.RT-public",
            "aws_vpc.lab5-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698022664232:route-table/rtb-014eda06ffa18b32d",
            "id": "rtb-014eda06ffa18b32d",
            "owner_id": "698022664232",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0129b1c8072c69fc7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab5-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0635470dbba4d4d55",
            "route_table_id": "rtb-014eda06ffa18b32d",
            "subnet_id": "subnet-0523167db10f8bc33"
          },
          "dependencies": [
            "aws_route_table.RT-public",
            "aws_subnet.SN-public-1",
            "aws_vpc.lab5-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698022664232:security-group/sg-047851ff056a825c5",
            "description": "Allo SSH and HTTP",
            "egress": [],
            "id": "sg-047851ff056a825c5",
            "ingress": [],
            "name": "Allow SSH and HTTP traffic",
            "name_prefix": "",
            "owner_id": "698022664232",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-tf"
            },
            "tags_all": {
              "Name": "sg-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0129b1c8072c69fc7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab5-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SN-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698022664232:subnet/subnet-0f6540a679e7c2526",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "100.64.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6540a679e7c2526",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "698022664232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SN-private-1"
            },
            "tags_all": {
              "Name": "SN-private-1"
            },
            "vpc_id": "vpc-0129b1c8072c69fc7"
          },
          "dependencies": [
            "aws_vpc.lab5-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SN-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698022664232:subnet/subnet-0523167db10f8bc33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "100.64.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0523167db10f8bc33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "698022664232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SN-public-1"
            },
            "tags_all": {
              "Name": "SN-public-1"
            },
            "vpc_id": "vpc-0129b1c8072c69fc7"
          },
          "dependencies": [
            "aws_vpc.lab5-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab5-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698022664232:vpc/vpc-0129b1c8072c69fc7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "100.64.0.0/16",
            "default_network_acl_id": "acl-0bff887577e4e4003",
            "default_route_table_id": "rtb-0904a57555356b59b",
            "default_security_group_id": "sg-07b168a74ed2b3920",
            "dhcp_options_id": "dopt-04eb8572708d1053b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0129b1c8072c69fc7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0904a57555356b59b",
            "owner_id": "698022664232",
            "tags": {
              "Name": "lab5-vpc"
            },
            "tags_all": {
              "Name": "lab5-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698022664232:security-group-rule/sgr-0cb80e55fdb75018a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0cb80e55fdb75018a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-047851ff056a825c5",
            "security_group_rule_id": "sgr-0cb80e55fdb75018a",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-tf",
            "aws_vpc.lab5-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698022664232:security-group-rule/sgr-0efcd5c0d54be8833",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0efcd5c0d54be8833",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-047851ff056a825c5",
            "security_group_rule_id": "sgr-0efcd5c0d54be8833",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-tf",
            "aws_vpc.lab5-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698022664232:security-group-rule/sgr-0ff37fb2ae7f5c57c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0ff37fb2ae7f5c57c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-047851ff056a825c5",
            "security_group_rule_id": "sgr-0ff37fb2ae7f5c57c",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-tf",
            "aws_vpc.lab5-vpc"
          ]
        }
      ]
    }
  ]
}